@@ -296,6 +296,14 @@ Fixes:
 - README.linux replaced with README.en.linux
 - Possible fix that prevent occur of issue 17 ...
 - Fixed typo german language <string id="33300">
+- 2 functions inside the addon are not unicode-safe.
+- Finaly fixed issue 19 (confirmed)
+- Fixed ugly bug inside dvd-chapter.sh 
+  (there was no device for dvd on some calls to lsdvd)
+  Thanks to fabrice.peiffer@convar.com
+
+  
+
  
  
 
